// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Starter Block when given custom data should render the block using the custom data 1`] = `
<block
  color={
    Object {
      "background": "yellow",
    }
  }
  text="Hello from props"
>
  <Component />
</block>
`;

exports[`The Starter Block when mounted with default data should match the snapshot 1`] = `
<bound createElementWithValidation>
  <block
    color={
      Object {
        "background": "transparent",
      }
    }
    text="Default prop"
  >
    <div>
      Default prop
    </div>
  </block>
</bound createElementWithValidation>
`;

exports[`The Starter Block when there is no custom data should render the block with the default content 1`] = `
<block
  color={
    Object {
      "background": "transparent",
    }
  }
  text="Default prop"
>
  <Component />
</block>
`;
